--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,10 @@ spring.thymeleaf.cache=false
 
 # Ch? ?? template (HTML, XML, TEXT, v.v.)
 spring.thymeleaf.mode=HTML
+#mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=0915540515x@gmail.com
+spring.mail.password=rlzf unrd ctun tkni
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
