--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,19 +15,19 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-# Th? m?c ch?a template
+# Thu muc chia template
 spring.thymeleaf.prefix=classpath:/templates/
 
-# Ph?n m? r?ng file
+# Phan mo rong file
 spring.thymeleaf.suffix=.html
 
-# Mã hóa
+# Ma hoa
 spring.thymeleaf.encoding=UTF-8
 
-# Không cache (?? dev d? test)
+# Khong cache ( dev de test)
 spring.thymeleaf.cache=false
 
-# Ch? ?? template (HTML, XML, TEXT, v.v.)
+# template (HTML, XML, TEXT, v.v.)
 spring.thymeleaf.mode=HTML
 #mail
 spring.mail.host=smtp.gmail.com
