--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+#VNPay
+vnp_TmnCode=86S6STEW
+vnp_HashSecret=J3AUY7C08L5RMOLSXHLNZTRAPGP2A8EK
+vnp_Url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnp_ReturnUrl=http://localhost:8080/vnpay/returnurl
