update manage product

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,8 @@ spring.thymeleaf.prefix=classpath:/templates/
 # Phan mo rong file
 spring.thymeleaf.suffix=.html
 
+upload.path=src/main/resources/static/admin-assets/images/products
+
 # Ma hoa
 spring.thymeleaf.encoding=UTF-8
 
