feat: Add resend OTP and enhance product detail page
This commit introduces two major features to improve user experience: the ability to resend an OTP during registration and the display of related and trending products on the product detail page.

Resend OTP Functionality:
- A new endpoint `/sign-up/resend-otp` is added to `SignUpController` to handle OTP resend requests.
- The `UserService` is updated with logic to generate a new OTP, set a new expiration time, and email it to the user.
- The `otp.html` template now includes a "Resend OTP" button and associated JavaScript to call the new endpoint asynchronously.

Product Detail Page Enhancements:
- The page now displays a list of "Related Products" from the same category and a "Trending Products" section based on view count.
- New query methods were added to `ProductsRepository` and `ProductService` to fetch this data.
- The product quantity input has been improved with "+" and "-" buttons for better usability.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,5 +50,5 @@ vnp_HashSecret=J3AUY7C08L5RMOLSXHLNZTRAPGP2A8EK
 vnp_Url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 vnp_ReturnUrl=http://localhost:8080/vnpay/returnurl
 
-# Thêm dòng này ?? gi? nguyên tên b?ng và c?t nh? ?ã ??nh ngh?a trong Entity
+# Thï¿½m dï¿½ng nï¿½y ?? gi? nguyï¿½n tï¿½n b?ng vï¿½ c?t nh? ?ï¿½ ??nh ngh?a trong Entity
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
